      builds
    - Bump minimum NSS version to 3.13.2 for --enable-system-nss builds
  * Refresh patches:
    - update debian/patches/ubuntu-ua-string-changes.patch
    - update debian/patches/change-moz-app-name.patch
    - update debian/patches/ubuntu-codes-google.patch
  * Clean up the file exclude list and add comments for excluded files
    - update debian/build/create-tarball.py

  [ Micah Gersten <micahg@ubuntu.com> ]
  * fix LP: #926347 - Fix apparmor denial on Lucid and Maverick
    - update debian/usr.bin.firefox.apparmor.10.04
    - update debian/usr.bin.firefox.apparmor.10.10

 -- Chris Coulson <chris.coulson@canonical.com>  Fri, 10 Feb 2012 13:00:06 +0000

firefox-trunk (12.0~a1~hg20120131r85707-0ubuntu1) precise; urgency=low

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * New upstream snapshot v12.0 A1 HG20120131r85707
    - Fix LP: #857153 - Needs to get accessibility settings from GSettings

  * Update globalmenu-extension to 2.5 prerelease r275
  * Keep the firefox-kde-support suggest on releases older than precise
    for now
    - update debian/rules
  * Ensure that we suggest kmozillahelper on lucid
    - update debian/rules
  * Ensure that we replace kubuntu-firefox-installer on lucid
    - update debian/rules
  * Disable the tests on powerpc, because it sucks too much to run them
    - update debian/rules
  * "Fix" LP: #897794 - some websites expect "X11" to be the first token of
    the platform component in the UA string
    - update debian/patches/ubuntu-ua-string-changes.patch
  * Call xvfb-run with "-a" in case there are other servers running on the
    builder
    - update debian/build/testsuite.mk
  * Don't build with --disable-gconf on precise and newer. There is no hard
    run-time requirement on gconf when enabled now, after bmo: 713827 landed.
    This keeps us closer to the upstream configuration
    - update debian/config/mozconfig.in
    - update debian/rules