@@ -25,8 +25,8 @@ while [ ! -x $MOZ_LIBDIR/$MOZ_APP_NAME ] ; do
         MOZ_APP_LAUNCHER=`readlink -f $MOZ_APP_LAUNCHER`
         MOZ_LIBDIR=`dirname $MOZ_APP_LAUNCHER`
     else
-       echo "Can't find $MOZ_LIBDIR/$MOZ_APP_NAME"
-       exit 1
+        echo "Can't find $MOZ_LIBDIR/$MOZ_APP_NAME"
+        exit 1
     fi
 done
 
@@ -89,22 +89,38 @@ fi
 %%endif
 
 if [ $moz_debug -eq 1 ] ; then
-    debugger=`which $moz_debugger`
+    case $moz_debugger in
+        memcheck)
+            debugger="valgrind"
+            ;;
+        *)
+            debugger=$moz_debugger
+            ;;
+    esac
+
+    debugger=`which $debugger`
     if [ ! -x $debugger ] ; then
-       echo "Invalid debugger"
-       exit 1
+        echo "Invalid debugger"
+        exit 1
     fi
 
-    case `basename $debugger` in
-       gdb)
-         exec $debugger $moz_debugger_args --args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
-         ;;
-       valgrind)
-         exec $debugger $moz_debugger_args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
-         ;;
-       *)
-         exec $debugger $moz_debugger_args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
-         ;;
+    case `basename $moz_debugger` in
+        gdb)
+            exec $debugger $moz_debugger_args --args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
+            ;;
+        memcheck)
+%%ifdef MOZ_VALGRIND
+            export G_SLICE=always-malloc
+            export G_DEBUG=gc-friendly
+            exec $debugger -v --tool=memcheck --leak-check=full --smc-check=all-non-file $moz_debugger_args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
+%%else
+            echo "$MOZ_APP_NAME has not been compiled with valgrind support"
+            exit 1
+%%endif
+            ;;
+        *)
+            exec $debugger $moz_debugger_args $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
+            ;;
     esac
 else
     exec $MOZ_LIBDIR/$MOZ_APP_NAME "$@"
