@@ -17,13 +17,16 @@ firefox-trunk (12.0~a1~hg20120131r85707-0ubuntu2) UNRELEASED; urgency=low
     - update debian/patches/ubuntu-codes-google.patch
   * Clean up the file exclude list and add comments for excluded files
     - update debian/build/create-tarball.py
+  * Make it easy to run Firefox in valgrind for builds that are compiled
+    with explicit valgrind support
+    - update debian/firefox.sh.in
 
   [ Micah Gersten <micahg@ubuntu.com> ]
   * fix LP: #926347 - Fix apparmor denial on Lucid and Maverick
     - update debian/usr.bin.firefox.apparmor.10.04
     - update debian/usr.bin.firefox.apparmor.10.10
 
- -- Chris Coulson <chris.coulson@canonical.com>  Fri, 10 Feb 2012 13:00:06 +0000
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 16 Feb 2012 17:15:10 +0000
 
 firefox-trunk (12.0~a1~hg20120131r85707-0ubuntu1) precise; urgency=low
 
